syntax = "proto3";

package api.admin.types;

option go_package = "store/api/admin/types;typepb";


message EventLog {

}


